User role in auth response
