# app/Http/Controllers/AuthController.php
@@ -19,6 +19,7 @@ class AuthController extends Controller
         $token = $user->createToken('restToken')->plainTextToken;
 
         return response()->json([
+            'user_role' => $user->role_id,
             'token' => $token
         ], 200);
     }
@@ -48,6 +49,7 @@ class AuthController extends Controller
 //                            $token = $user->createToken('restToken', ['*'], Carbon::now()->addDays(1))->plainTextToken;
                             $token = $user->createToken('restToken')->plainTextToken;
                             return response()->json([
+                                'user_role' => $user->role_id,
                                 'token' => $token
                             ], 200);
                         }
@@ -76,6 +78,7 @@ class AuthController extends Controller
                 $token = $user->createToken('restToken', ['*'], Carbon::now()->addDays(1))->plainTextToken;
 
                 return response()->json([
+                    'user_role' => $user->role_id,
                     'token' => $token
                 ], 200);
             }
